[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/GameScene.gd" type="Script" id=1]
[ext_resource path="res://Game/MainScene.tscn" type="PackedScene" id=2]

[sub_resource type="Environment" id=1]
adjustment_enabled = true
adjustment_brightness = 1.65
adjustment_contrast = 1.86
adjustment_saturation = 0.01

[node name="GameScene" type="Node2D"]
script = ExtResource( 1 )

[node name="MainScene" parent="." instance=ExtResource( 2 )]

[node name="PollAirconsole" type="Timer" parent="."]
wait_time = 0.3

[node name="GameStartTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="Control" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="VBoxContainer" parent="UI"]
margin_right = 220.0
margin_bottom = 122.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
[connection signal="timeout" from="PollAirconsole" to="." method="_on_PollAirconsole_timeout"]
[connection signal="timeout" from="GameStartTimer" to="." method="_on_GameStartTimer_timeout"]
